--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="/ruleengine-ui-demo/favicon.ico" />
+  <link rel="icon" type="image/png" href="/ruleengine-ui-demo/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rule Engine UI Toolkit for VS Code</title>
-  <script type="module" crossorigin src="/ruleengine-ui-demo/assets/index.d90683cb.js"></script>
+  <script type="module" crossorigin src="/ruleengine-ui-demo/assets/index.c4d3fbf9.js"></script>
   <link rel="modulepreload" href="/ruleengine-ui-demo/assets/vendor.208fbc23.js">
-  <link rel="stylesheet" href="/ruleengine-ui-demo/assets/index.5150c230.css">
+  <link rel="stylesheet" href="/ruleengine-ui-demo/assets/index.4376c473.css">
 </head>
 
 <body>
