--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" class="vscode-dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/png" href="/ruleengine-ui-demo/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rule Engine UI Toolkit for VS Code</title>
+    <script type="module" crossorigin src="/ruleengine-ui-demo/assets/index.b800adc8.js"></script>
+    <link rel="stylesheet" href="/ruleengine-ui-demo/assets/index.e5e1d36d.css">
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" type="image/png" href="/ruleengine-ui-demo/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rule Engine UI Toolkit for VS Code</title>
-  <script type="module" crossorigin src="/ruleengine-ui-demo/assets/index.736d84e8.js"></script>
-  <link rel="modulepreload" href="/ruleengine-ui-demo/assets/vendor.abcb148d.js">
-  <link rel="stylesheet" href="/ruleengine-ui-demo/assets/index.b45a7861.css">
-</head>
-
-<body>
-  <div id="app"></div>
-  
-</body>
-
+  <body>
+    <div id="app"></div>
+    
+  </body>
 </html>
